examples/test/testpolicy17102.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17102
  namespace: namespace382
spec:
  podSelector:
    matchLabels:
      key5: value25
      key10: value41
      key0: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value3
          key0: value8
          key1: value34
      podSelector:
        matchLabels:
          key15: value24
